# simsong-presenter

./: .gitattributes  .gitmodules  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LICENCE.md  README.md  build.ninja  cmake_install.cmake  index.html  index.js  index.wasm
.github/workflows/: main.yml
docs/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake  simsong-presenter.js
docs/lib/SDL/: SDL3ConfigVersion.cmake  SDL3headersTargets.cmake  SDL3staticTargets.cmake  SDL3testTargets.cmake  cmake_install.cmake
docs/lib/SDL/include-revision/SDL3/: SDL_revision.h
docs/lib/SDL_image/: cmake_install.cmake
docs/lib/SDL_ttf/: cmake_install.cmake
docs/resources/: LICENCE.md
lib/SDL/: SDL3headersTargets.cmake  SDL3staticTargets.cmake  SDL3testTargets.cmake  cmake_install.cmake
lib/SDL/include-revision/SDL3/: SDL_revision.h
lib/SDL_image/: cmake_install.cmake
lib/SDL_ttf/: cmake_install.cmake
other/: index.html  index2.html
resources/Images/: CREDITS.md  INFO.md
src/: app.c  app.h  em_clipboard.h  emscripten_clipboard.c  main.c  song.c  song.h  utils.c  utils.h
src/clay/: clay_layout.c  clay_layout.h  clay_renderer.c  clay_renderer.h
src/em/: em_clipboard.h  em_resize.h
webbuild/: .ninja_deps  .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake  simsong-presenter.html  simsong-presenter.js  simsong-presenter.wasm
webbuild/lib/SDL/: SDL3headersTargets.cmake  SDL3testTargets.cmake  cmake_install.cmake
